src/test/deca/context/valid/class/valid_override_method_return_subtype.deca
// Description:
//    Test of a a method that override a super class method with a different return
//    Test rule 2.7
//
// Result:
//
// History:
//    created on 12/01/2025

class MySuperClass{
}

class MyClass extends MySuperClass{
}

class SuperDummy{
    MySuperClass myMethod(){
        return new MySuperClass();
    }
}

class Dummy extends SuperDummy{
    MyClass myMethod(){
        return new MyClass();
    }
}

{
    //empty main
}