src/test/deca/context/invalid/class/invalid_override_method_diff_sig.deca
// Description:
//    Test of a a method that override a super class method with a different signature
//    Test rule 2.7
//
// Result:
// [Begin Result]
//invalid_override_method_diff_sig.deca:20:8: Redefined method myMethod doesn’t have the same signature as the inherited method. Rule 2.7.
// [End Result]
//
// History:
//    created on 12/01/2025

class MySuperClass{
    int myMethod(int a){
        return a;
    }
}

class MyClass extends MySuperClass{
    int myMethod(float a){
        return 1;
    }
}

{
    //empty main
}
